[package]
name = "airlock"
version = "0.0.5"
edition = "2021"

license = "Apache-2.0"
description = "no_std async communication"
repository = "https://github.com/RGafiyatullin/airlock-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = []
thiserror = ["dep:thiserror", "std"]

[dependencies]
futures = {version = "^0.3", default-features = false}
thiserror = {version = "^1", optional = true}

[dev-dependencies]
tokio = {version = "^1", features = ["macros", "rt", "time"]}
